--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,18 +4,23 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
-        app_user_provider:
+        app_client_provider:
             entity:
                 class: App\Entity\User
-                property: email
+                property: 'email'
+        app_photographer_provider:
+            entity:
+                class: App\Entity\Photographer
+        app_users:
+            chain:
+                providers: ['app_photographer_provider','app_client_provider']
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: app_user_provider
+            provider: app_users
             form_login:
                 login_path: app_login
                 check_path: app_login
