--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,12 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "refreshDatabase": [
+            "php bin/console doctrine:database:drop --force",
+            "php bin/console doctrine:database:create",
+            "php bin/console doctrine:migrations:migrate",
+            "php bin/console doctrine:fixture:load -n"
         ]
     },
     "conflict": {
