add type for colorFolder

--- a/composer.json
+++ b/composer.json
@@ -70,8 +70,9 @@
         "refreshDatabase": [
             "php bin/console doctrine:database:drop --force",
             "php bin/console doctrine:database:create",
-            "php bin/console doctrine:migrations:migrate",
+            "php bin/console doctrine:migration:migrate",
             "php bin/console doctrine:fixture:load -n"
+
         ]
     },
     "conflict": {
